Add UrlInterface dependency to StoreDataCollector and update CMS page URL generation logic

--- a/view/frontend/templates/llmstxt-generated.phtml
+++ b/view/frontend/templates/llmstxt-generated.phtml
@@ -15,7 +15,7 @@ $data = $block->getData('generatedData')->getCollectedData();
 
 <?php if (!empty($data['cms_pages'])): ?>
 <?php foreach ($data['cms_pages'] as $page): ?>
-- [<?= $page['title'] ?>](<?= $page['url'] ?>) : <?= $page['meta_description'] . PHP_EOL ?>
+- [<?= $page['title'] ?>](<?= $page['url'] ?>)<?php if (!empty($cat['meta_description'])): ?> : <?= $page['meta_description'] ?><?php endif; ?><?= PHP_EOL ?>
 <?php endforeach; ?>
 <?php endif; ?>
 
